<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/default_forecast_bg" >

<TextView
    android:id="@+id/textView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_marginBottom="20dp"
    android:gravity="center"
    android:padding="10dp"
    android:text="@string/title_activity_star_textview3"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:textColor="@color/white"
    android:textSize="14sp" />

<TextView
    android:id="@+id/kq_dk_map_address"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="64dp"
    android:text="@string/title_activity_star_textview1"
    android:textColor="@color/white"
    android:textSize="24sp" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/kq_dk_map_address"
    android:layout_below="@+id/kq_dk_map_address"
    android:text="@string/title_activity_star_textview2"
    android:textColor="@color/white"
    android:textSize="16sp"
    android:textStyle="italic" />

</RelativeLayout>